# wavelit

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerrun.aws.json  Makefile  README.md  access_control.py  app.py  buildspec.yml  config.yaml  ecg_simulation.py  graph_utils.py  home.py  local.py  ngboost.py  pipeline.py  pyproject.toml  simulation.py  wavelit_admin.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: osv-scanner.yml  ruff-linter.yml
data_models/: abnormality_parsers.py
dsp/: analytics.py  artifact_removal.py  graph_preprocessing.py  lab_ecg_stats.py  neurometrics.py
graph_helpers/: eeg_viewer_helper.py
graphs/: ecg_viewer.py  eeg_viewer.py  fft_plot_ngboost.py  psd_epochs.py
mywavelab/dsp/: ecg_stats-temp.py  ecg_stats.py
mywavelab/io/: eeg_pathing.py
mywavelab/libraries/: mywavelab.py
mywavelab/parsers/: deymed.py  edf.py  parser.py
mywavelab/testing/: file_testing.py
mywavelab/utils/: params.py
pages/: epochs.py  ngboost.py  protocol.py  protocols.py  viewer.py  ❤️ ecg.py  🌊 wavelets.py  🏄 epochs.py  🧠 eeg.py  🧠 viewer.py
services/: auth.py  eeg_data_manager.py  mert_data_manager.py  mywaveplatform_api.py  test.py
services/mert2_data_management/: __init__.py  mert_api.py  mert_data_manager.py  settings.py  test.py
sigma_dashboards/: dods_dashboards.py  protocols.py  report-logs.py  reports.py  wavelit-admin.py  wavelit_admin.py
streamlit_apps/: eeg.py  neurosynchrony.py  ngboost.py  protocols.py  reports.py  surveys.py  ❤️ ecg.py  🌊 epochs.py  🏄 epochs.py  🧠 eeg.py
streamlit_apps/mert_components/: __init__.py  abnormalities.py  artifacts.py  documents.py  eeg_history.py  eeg_review.py  notes.py  protocol_review.py
streamlit_apps/mert_components/review_utils/: __init__.py  utils.py
streamlit_dashboards/: __init__.py  ecg_visualization.py  eeg_visualization.py  epoch_visualizations.py
synthetic_data/: aea.json  synthetic_eeg.edf
utils/: graph_utils.py  helpers.py  performance_cache.py
