[tool.poetry]
name = "eeg-plot-streamlit-app"
version = "1.8.0"
description = "EEG plot generator"
authors = ["Luis Camargo <lcamargo@waveneuro.com>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.33.0"
mywaveanalytics = {git = "https://github.com/waveneuroscience/MyWaveAnalytics.git"}
plotly = "^5.22.0"
streamlit-authenticator = "^0.3.2"
seaborn = "0.11.2"
matplotlib = "3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
