[tool.poetry]
name = "Wavelit"
version = "2.13.3"

description = "A set of tools and dashboards for enhance EEG review for Wave Neuro's EEG lab"
authors = ["Luis Camargo <lcamargo@waveneuro.com>", "Joseph Chong <joseph@waveneuro.com>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.33.0"
plotly = "^5.22.0"
streamlit-authenticator = "^0.3.2"
seaborn = "0.11.2"
matplotlib = "3.4.3"
pillow = "^10.3.0"
kaleido = "0.2.1"
aiohttp = "^3.9.5"
aiodns = "^3.2.0"
python-dotenv = "^1.0.1"
pydantic = "^2.9.1"
pydantic-settings = "^2.5.2"
bs4 = "^0.0.2"
streamlit-pdf-viewer = "^0.0.18"
mywaveanalytics = { git = "https://github.com/waveneuroscience/MyWaveAnalytics.git", branch = "MWP-290" }
streamlit-shadcn-ui = "^0.1.18"



[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
